<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/basic_auth_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/basic_auth_txt"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/auth_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/secret_key_example"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/basic_auth_desc"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:maxEms="16"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/auth_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>